// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render default button with text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={false}
  type="button"
>
  <p
    className="text undefined"
  >
    Нажми меня
  </p>
</button>
`;

exports[`Should renderer button with loader 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Should renderer default button without text 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={false}
  type="button"
>
  <p
    className="text undefined"
  >
    
  </p>
</button>
`;

exports[`Should renderer disabled button 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  >
    Отключенная кнопка
  </p>
</button>
`;
